--- a/button.css
+++ b/button.css
@@ -1,10 +1,26 @@
-button {
+/*
+.button {
   padding: 10px 20px;
   outline: none;
   margin: 10px;
   border: none;
   border-radius: 2px;
-}
+  background: cornflowerblue;
+}*/
+
+  button {
+    background-color:#1686d9;
+    border: 2px solid white;
+    border-radius: 30px;
+    text-decoration: none;
+    padding: 10px 28px;
+    color: white;
+    margin-top: 10px;
+    display: inline-block;
+    width: 50%;
+    margin-left: 25%;
+  }
+
 
 button.current {
   box-shadow: 0 0 0 2px white,
