added signup screen & forgot password screen

--- a/button.css
+++ b/button.css
@@ -15,7 +15,7 @@
     text-decoration: none;
     padding: 10px 28px;
     color: white;
-    margin-top: 10px;
+    margin: 10px 0;
     display: inline-block;
     width: 50%;
     margin-left: 25%;
